# RecieptWallet

./: README.md  main.py  output.txt  pyproject.toml  wallet.db
app/: api.py  db.py
backend/: README.md  main.py  output.txt  pyproject.toml  wallet.db
backend/src/: api.py  app.py  db.py
frontend/: app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx  edit_receipt.tsx  index.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  upload.tsx
frontend/components/: Button.tsx  CancelButton.tsx  ImageViewer.tsx  UploadButton.tsx
temp/: main.py  pyproject.toml
